[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/characters/square_projectile.png" type="Texture" id=1]
[ext_resource path="res://src/particles/SquareProjectile.gd" type="Script" id=2]
[ext_resource path="res://src/Hitbox.gd" type="Script" id=3]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "spin"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 36, -0.25, 0, 0.25, 0, 72, -0.25, 0, 0.25, 0, 108, -0.25, 0, 0.25, 0, 144, -0.25, 0, 0.25, 0, 180, -0.25, 0, 0.25, 0, 216, -0.25, 0, 0.25, 0, 252, -0.25, 0, 0.25, 0, 288, -0.25, 0, 0.25, 0, 324, -0.25, 0, 0.25, 0, 360, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 )
}

[sub_resource type="RectangleShape2D" id=4]

[node name="SquareProjectile" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/spin = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Hitbox" type="Area2D" parent="Sprite"]
collision_mask = 5
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Hitbox"]
scale = Vector2( 0.95, 0.95 )
shape = SubResource( 4 )

[node name="AliveTimer" type="Timer" parent="."]

[connection signal="area_entered" from="Sprite/Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Sprite/Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="AliveTimer" to="." method="_on_AliveTimer_timeout"]
